[gd_scene load_steps=11 format=3 uid="uid://tclpt1ub1fdf"]

[ext_resource type="Texture2D" uid="uid://dg6ipi7umswi6" path="res://sprites/slime_green.png" id="1_l1c3k"]
[ext_resource type="Script" path="res://scriptes/enemy.gd" id="1_ppnud"]
[ext_resource type="AudioStream" uid="uid://cfyxv1f4uk0rh" path="res://sounds/explosion.wav" id="3_0wv4x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c01j8"]
atlas = ExtResource("1_l1c3k")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_oh014"]
atlas = ExtResource("1_l1c3k")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qkes"]
atlas = ExtResource("1_l1c3k")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_na6qf"]
atlas = ExtResource("1_l1c3k")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ynucr"]
atlas = ExtResource("1_l1c3k")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_dt1gu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c01j8")
}],
"loop": true,
"name": &"hit",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oh014")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qkes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_na6qf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynucr")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fndij"]
size = Vector2(14, 12.5)

[node name="Enemy" type="CharacterBody2D" groups=["enemy_group"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_ppnud")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_dt1gu")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5.75)
shape = SubResource("RectangleShape2D_fndij")

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(-9, 0)
collision_mask = 2

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(9, 0)
collision_mask = 2

[node name="RayCastUp" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(0, -8)
collision_mask = 2

[node name="DieTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_0wv4x")

[node name="RayCastFindWayRight" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(15, 8)

[node name="RayCastFindWayLeft" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(-14, 8)

[connection signal="timeout" from="DieTimer" to="." method="_on_die_timer_timeout"]
